# availability_bot

./: .gitignore  Big Brother-7850ee837610.json  BigBrother-calendarKey.json  Cargo.toml  data.json
src/: basic_structures.rs  basic_structures.rs.bk  configuration.rs.bk  events_sender.rs  events_sender.rs.bk  main.rs  main.rs.bk  message_processor.rs  message_processor.rs.bk  post_to_form.rs  save_load_state.rs  save_load_state.rs.bk  telegram_api.rs  telegram_api.rs.bk  user_data.rs  user_data.rs.bk
src/message_processor/: dialog_processing.rs  dialog_processing.rs.bk  mod.rs  mod.rs.bk  simple_dialogs.rs  wfh.rs
src/post_to_form/: mod.rs
src/save_load_state/: mod.rs
src/user_data/: mod.rs
