[package]
name = "big_brother"
version = "0.1.0"
authors = ["Dmitry Gordon <>"]

[dependencies]
telegram-bot = { git = "https://github.com/White-Oak/telegram-bot.git" }
mime = "*"
hyper = "*"
hyper-rustls = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
log = "*"
env_logger = "*"
chrono = "*"
yup-oauth2 = "*"
lazy_static = "*"
