[package]
name = "big_brother"
version = "0.1.0"
authors = ["Dmitry Gordon <>"]

[dependencies]
telegram-bot = "0.6.1"
futures="*"
tokio-core="*"
mime = "*"
hyper = "*"
hyper-rustls = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
log = "*"
env_logger = "*"
chrono = "*"
yup-oauth2 = { git = "https://github.com/dermesser/yup-oauth2.git" }
lazy_static = "*"
