[package]
name = "big_brother"
version = "0.1.0"
authors = ["Dmitry Gordon <>"]

[dependencies]
telegram-bot = "*"
futures="*"
tokio-core="*"
hyper = "0.10.11"
hyper-rustls = "0.6.1"
serde_derive = "*"
serde = "*"
serde_json = "*"
log = "*"
env_logger = "*"
chrono = "*"
time = "*"
yup-oauth2 ="*"
lazy_static = "*"
